feat: polishing for the assignment